# projekt-yukti

./: BUSINESS_MODEL.md  QUICK_START.md  README.md  package-lock.json
backend-api/: .dockerignore  .env.docker  .env.production  Dockerfile  README.md  check-polls.ts  create-onchain-poll.ts  docker-compose.yml  index.ts  make-poll-onchain.ts  package-lock.json  package.json  setup-db.sh  show-onchain-polls.ts  tsconfig.json
backend-api/prisma/: schema.prisma  seed.js  seed.ts
backend-api/prisma/migrations/20251029090814_new_schema/: migration.sql
backend-api/src/blockchain/solana/: wallet.service.ts  (+2 more)
backend-api/src/config/: database.ts  redis.ts  solana.ts
backend-api/src/lib/: prisma.ts
backend-api/src/middleware/: auth.ts  errorHandler.ts  rateLimit.ts  validation.ts
backend-api/src/routes/: auth.ts  bids.ts  notifications.ts  payments.ts  polls.ts  users.ts  wallet.ts
backend-api/src/services/: auth.service.ts  bid.service.ts  poll.service.ts  solana.service.ts
backend-api/src/socket/: events.ts  handlers.ts
backend-api/src/types/: index.ts
backend-api/src/utils/: encryption.ts  jwt.ts
mobile-app/yukti/: .env  app.json
solana-program/: .env  .gitignore  Anchor.toml  README.md  admin-keypair.json  build-and-test.sh  package-lock.json  package.json  quick-test.sh  treasury-keypair.json
solana-program/programs/opinion_trading/: Cargo.toml
solana-program/programs/opinion_trading/src/: lib.rs
solana-program/scripts/: init-poll.ts
solana-program/tests/: opinion-trading.test.ts  opinion-trading.ts.backup  setup-verifications.ts  simple-test.ts
(+14 files in other folders)
