[package]
name = "opinion-trading"
version = "0.1.0"
description = "Yukti - Opinion Trading Platform with AMM on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "opinion_trading"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
solana-program-test = "~1.17"
solana-sdk = "~1.17"
spl-token = { version = "~4.0", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true
